@@ -17,6 +17,7 @@
 	<file>./icons/autocolor.png</file>
 	<file>./icons/axes.png</file>
 	<file>./icons/bfc.png</file>
+	<file>./icons/bfc-view.png</file>
 	<file>./icons/bomb.png</file>
 	<file>./icons/brick-new.png</file>
 	<file>./icons/brick.png</file>
